fix(): collapse menu item should animate properly (#92)
Fixes #86

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -68,10 +68,6 @@ md-collapse-menu-item {
     margin: 0;
     padding: 0;
     list-style: none;
-
-    &.no-transition {
-      transition: none !important;
-    }
   }
 }
 
